added cdlib install script

--- a/Network Analysis/Network Analysis Notebook.ipynb
+++ b/Network Analysis/Network Analysis Notebook.ipynb
@@ -1,23 +1,31 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
+      "cell_type": "code",
       "source": [
-        "<a href=\"https://colab.research.google.com/github/peter-callahan/Network-Analysis/blob/main/Network%20Analysis/Network%20Analysis%20Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "!pip install cdlib"
+      ],
+      "metadata": {
+        "id": "ODirXWQxYeV_",
+        "outputId": "45b92e86-23d1-457d-b5d3-96670fa9d8de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "ODirXWQxYeV_",
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed Levenshtein-0.20.8 angel-cd-1.0.3 bimlpa-0.1.2 cdlib-0.2.6 chinese-whispers-0.8.0 demon-2.0.6 dynetx-0.3.1 eva-lcd-0.1.1 igraph-0.10.2 markov-clustering-0.0.6.dev0 nf1-0.0.4 pulp-2.7.0 pyclustering-0.10.1.2 python-Levenshtein-0.20.8 python-igraph-0.10.2 rapidfuzz-2.13.3 texttable-1.6.7 thresholdclustering-1.1\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "c9ee2d26",
-      "metadata": {
-        "id": "c9ee2d26"
-      },
-      "outputs": [],
       "source": [
         "import networkx as nx\n",
         "import random\n",
@@ -32,6 +40,26 @@
         "# reference\n",
         "# https://stackoverflow.com/questions/16566871/node-size-dependent-on-the-node-degree-on-networkx\n",
         "# https://stackoverflow.com/questions/6461713/using-draw-networkx-how-to-show-multiple-drawing-windows"
+      ],
+      "metadata": {
+        "id": "EOnhZsLsYpIs",
+        "outputId": "bf91c268-d84d-428c-b012-3860c27cf574",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "EOnhZsLsYpIs",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Note: to be able to use all crisp methods, you need to install some additional packages:  {'wurlitzer', 'graph_tool', 'leidenalg', 'karateclub', 'infomap'}\n",
+            "Note: to be able to use all overlapping methods, you need to install some additional packages:  {'ASLPAw', 'karateclub'}\n",
+            "Note: to be able to use all bipartite methods, you need to install some additional packages:  {'leidenalg', 'wurlitzer', 'infomap'}\n"
+          ]
+        }
       ]
     },
     {
@@ -140,7 +168,7 @@
       },
       "outputs": [],
       "source": [
-        "filename = '/Users/Alexandria/Library/CloudStorage/GoogleDrive-pfcallahan0001@gmail.com/My Drive/MSCS/Vanderbilt/CS-5283-50 Computer Networks/Network Analysis/graph_list.pkl'\n",
+        "filename = './graph_list.pkl'\n",
         "with open(filename, 'wb') as f:\n",
         "    pickle.dump(graph_list, f)"
       ]
@@ -642,7 +670,7 @@
     },
     "colab": {
       "provenance": [],
-      "include_colab_link": true
+      "toc_visible": true
     }
   },
   "nbformat": 4,
